--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 I've got no idea why the creators of the color-picker plugin
 decided to make it the default, when #ffffff is much cleaner...*/
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(5, 5, 5);
   color: rgb(255, 255, 255);
 }
 h1 {
@@ -15,15 +15,19 @@ h2 {
   font-size: 200%;
 }
 header {
-  background-color: rgb(31, 0, 33);
+  background-color: rgb(31, 31, 31);
+  box-shadow: 0 0 32px rgb(87, 206, 81);
 }
 section {
   padding: 10%;
   float: left;
   border: 3% dashed rgb(30, 0, 54);
+
 }
 article {
-  border: 3px dashed rgb(9, 9, 9);
+  border: 3px dashed rgb(87, 206, 81);
+  box-shadow: 0 0 32px rgb(87, 206, 81);
+  border-radius: 5px;
   padding: 10px;
   background-color: rgb(31, 31, 31);
 }
